# rscraper

./: .codacy.yml  .gitattributes  .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  Dockerfile  FORMAT.md  INSTALLING_UBUNTU.md  INSTALLING_WINDOWS.md  LICENSES.md  Makefile  README.md  RScraperConfig.cmake.in  RScraperConfigVersion.cmake.in  cat-tag  clang-format-this  ncat-proxy.sh  tag-sub  wrapper.py
.circleci/: config.yml
annoying/: CMakeLists.txt  README.md
annoying/src/: annoying.cpp
cltags/: CMakeLists.txt  mytagmedia.pro  src.pri
cltags/src/: cltagswindow.cpp  cltagswindow.h  main.cpp
data/: submission_ignore_field.txt
docs/: CMakeLists.txt  main.md  rscrape-cmnts.1.md  rscrape-mods.1.md  rscraped-reason.1.md  rscraped-tagged-subs.1.md  rscraper-export.1.md  rscraper-hub.1.md  rscraper-id2str.1.md  rscraper-import.1.md  rscraper-init-scraper.1.md  rscraper-init.1.md  rscraper-str2id.1.md  rscraper-tagger-server.1.md  rscraper-tags.1.md  rscraper.1.md
guides/: hub.md
hub/: CMakeLists.txt  README.md  hub.pro  qtdl.sh
hub/src/: add_sub2tag_btn.cpp  add_sub2tag_btn.hpp  btn_with_id.cpp  btn_with_id.hpp  cat_doughnut.cpp  cat_doughnut.hpp  cat_pie.cpp  cat_pie.hpp  categorytab.cpp  categorytab.hpp  clbtn.cpp  clbtn.hpp  cltagswindow.cpp  cltagswindow.h  io_tab.cpp  io_tab.hpp  main.cpp  main_tab.cpp  main_tab.hpp  maintab.cpp  maintab.hpp  mainwindow.cpp  mainwindow.hpp  msgbox.cpp  msgbox.hpp  mv_tag_btn.cpp  mv_tag_btn.hpp  mysql_declarations.hpp  name_dialog.cpp  name_dialog.hpp  notfound.cpp  notfound.hpp  reason_tab.cpp  reason_tab.hpp  regex_editor.cpp  regex_editor.hpp  regex_editor_highlighter.cpp  regex_editor_highlighter.hpp  regex_editor_vars_menu.cpp  regex_editor_vars_menu.hpp  (+27 more)
hub/src/regex_editor/: editor.cpp  editor.hpp  highlighter.cpp  vars_menu.cpp
include/: .mymysql.hpp.swp  mymysql.hpp  mymysql_results.hpp  utils.hpp
init/: CMakeLists.txt
init/src/: init.cpp  init.sql
io/: CMakeLists.txt  README.md
io/src/: export.cpp  import.cpp
man/: CMakeLists.txt  main.1  rscrape-cmnts.1.md  rscraped-tagged-subs.1.md  rscraper-export.1.md  rscraper-hub.1.md  rscraper-id2str.1.md  rscraper-import.1.md  rscraper-init.1.md  rscraper-str2id.1.md  rscraper-tagger-server.1.md  rscraper.1.md
packaging/: CMakeLists.txt  rscraper-hub.desktop  rscraper-tags.desktop
query/: CMakeLists.txt
query/src/: CMakeLists.txt  cmnts_from_subs_tagged.cpp
rtagger/: CMakeLists.txt  Makefile  README.md  rtagger.js  server.py
rtagger/browser-addon/: .gitignore  manifest.json  rtagger.xpi
rtagger/browser-addon/js/: rtagger.js
rtagger/src/: rtagger.cpp  rtagger.hpp  rtagger.js  server.go
scraper/: .gitignore  CMakeLists.txt  Dockerfile  README.md
scraper/src/: .gitignore  curl_utils.cpp  curl_utils.hpp  error_codes.hpp  etc.cpp  filter_comment_body.cpp  filter_comment_body.cpp.in  filter_comment_body.hpp  filter_comment_body.hpp.in  filter_comment_body_regexp.cpp  filter_comment_body_regexp.cpp.in  filter_comment_body_regexp.hpp  filter_comment_body_regexp.hpp.in  filter_init.cpp  filter_init.hpp  filter_subreddit.cpp  filter_subreddit.cpp.in  filter_subreddit.hpp  filter_user.cpp  filter_user.cpp.in  filter_user.hpp  getmods.cpp  init.cpp  mod_permissions.txt  mysql__cmnts_from_subs_tagged.cpp  rapidjson_utils.h  reddit_utils.cpp  reddit_utils.hpp  redditcurl_utils.cpp  redditcurl_utils.hpp  regex_file_eg.txt  regex_file_eg.txt.human  scrape.cpp  structs.h
scripts/: header-guards.py  regopt.pl  spaces2tabs.py
shared-src/: init_regexp_from_file.cpp  init_regexp_from_file.hpp
src/: curl_utils.hpp  error_codes.hpp  etc.cpp  getmods.cpp  id2str.c  json.cpp  main.cpp  mysql__cmnts_from_subs_tagged.cpp  mysql__rtagged.cpp  rapidjson_utils.h  reddit_utils.hpp  redditcurl_utils.hpp  rscrape.cpp  rscraper_utils.hpp  scrape.cpp  sql_utils.hpp  structs.h  utils.h
tagger/: CMakeLists.txt  README.md  rscraper-tagger-server.py  rtagger.js  wrapper.py
tagger/browser-addon/: background.js  build  manifest.json  options.html  options.js
tagger/browser-addon/js/: rtagger.js
tagger/include/rscraper/: tagger.hpp
tagger/src/: server.go  tagger.cpp
tagger/wangle-server/: CMakeLists.txt  Dockerfile  build-favicon  cmake.yml
tagger/wangle-server/src/: .gitignore  favicon.txt  init_cred_processor_callbacks.hpp  server-endpoints.txt  server.cpp
tagger/wangle-server/src/html/: comments_given_reason.html  flairs.html  flairs_regions.html  flairs_slurs.html  reason.html  root.html  subreddits_given_reason.html  tagged_users.html  user_summary.html
tagger/wangle-server/src/static/: utils.js
tagger/wangle-server/src/static/js/: utils.js
tags/: CMakeLists.txt  README.md
tags/src/: add_sub2tag_btn.cpp  add_sub2tag_btn.hpp  categorytab.cpp  categorytab.hpp  clbtn.cpp  clbtn.hpp  cltagswindow.cpp  cltagswindow.h  main.cpp  maintab.cpp  maintab.hpp  rm_sub2tag_btn.cpp  rm_sub2tag_btn.hpp  rm_tag_btn.cpp  rm_tag_btn.hpp  subreddit_name_dialog.cpp  subreddit_name_dialog.hpp  tagdialog.cpp  tagdialog.hpp  tagnamelabel.cpp  tagnamelabel.hpp  wlbl_label.cpp  wlbl_label.hpp
utils/: CMakeLists.txt  admin-tasks.sql  comment_body_regexp.py  init.cpp  mysql-cmds.txt
utils/src/: cmnts_from_subs_tagged.cpp  id2str.c  id2str.cpp  id2str.hpp  init.cpp  init.sql
